RESOLVED FIXED117165
REGRESSION: Undoing autocorrection doesn't prevent a future autocorrection
https://bugs.webkit.org/show_bug.cgi?id=117165
Summary REGRESSION: Undoing autocorrection doesn't prevent a future autocorrection
Ryosuke Niwa
Reported 2013-06-03 13:34:56 PDT
SpellingCorrectionCommand doesn't register SpellingCorrectionRecordUndoCommand with NSUndoManager. <rdar://problem/13915602>
Attachments
Fixes the bug (40.45 KB, patch)
2013-06-03 13:59 PDT, Ryosuke Niwa
darin: review+
Ryosuke Niwa
Comment 1 2013-06-03 13:59:55 PDT
Created attachment 203624 [details] Fixes the bug
WebKit Commit Bot
Comment 2 2013-06-03 14:00:55 PDT
Attachment 203624 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/editing/deleting/merge-paragraph-from-address-expected.txt', u'LayoutTests/editing/deleting/merge-paragraph-from-h6-expected.txt', u'LayoutTests/editing/deleting/merge-paragraph-from-listing-expected.txt', u'LayoutTests/editing/deleting/paste-with-transparent-background-color-expected.txt', u'LayoutTests/editing/inserting/insert-3907422-fix-expected.txt', u'LayoutTests/editing/pasteboard/copy-image-with-alt-text-expected.txt', u'LayoutTests/editing/pasteboard/merge-end-4-expected.txt', u'LayoutTests/editing/pasteboard/nested-blocks-with-text-area-expected.txt', u'LayoutTests/editing/pasteboard/nested-blocks-with-text-field-expected.txt', u'LayoutTests/editing/pasteboard/paste-text-001-expected.txt', u'LayoutTests/editing/pasteboard/paste-unrendered-select-expected.txt', u'LayoutTests/editing/pasteboard/smart-paste-003-trailing-whitespace-expected.txt', u'LayoutTests/platform/mac/editing/deleting/delete-block-merge-contents-001-expected.txt', u'LayoutTests/platform/mac/editing/deleting/delete-block-merge-contents-019-expected.txt', u'LayoutTests/platform/mac/editing/deleting/delete-block-merge-contents-020-expected.txt', u'LayoutTests/platform/mac/editing/pasteboard/4944770-2-expected.txt', u'LayoutTests/platform/mac/editing/pasteboard/8145-2-expected.txt', u'LayoutTests/platform/mac/editing/pasteboard/paste-line-endings-006-expected.txt', u'LayoutTests/platform/mac/editing/pasteboard/paste-text-008-expected.txt', u'LayoutTests/platform/mac/editing/pasteboard/paste-text-at-tabspan-003-expected.txt', u'LayoutTests/platform/mac/editing/pasteboard/paste-xml-expected.txt', u'LayoutTests/platform/mac/editing/spelling/autocorrection-blockquote-crash-expected.txt', u'LayoutTests/platform/mac/editing/spelling/autocorrection-blockquote-crash.html', u'LayoutTests/platform/mac/editing/spelling/autocorrection-respets-undo-expected.txt', u'LayoutTests/platform/mac/editing/spelling/autocorrection-respets-undo.html', u'LayoutTests/platform/mac/editing/spelling/autocorrection-with-multi-line-text-expected.txt', u'Source/WebCore/ChangeLog', u'Source/WebCore/editing/CompositeEditCommand.cpp', u'Source/WebCore/editing/CompositeEditCommand.h', u'Source/WebCore/editing/ReplaceSelectionCommand.cpp', u'Source/WebCore/editing/SpellingCorrectionCommand.cpp', u'Source/WebCore/editing/SpellingCorrectionCommand.h', u'Source/WebCore/editing/TypingCommand.cpp', u'Source/WebCore/editing/TypingCommand.h']" exit_code: 1 LayoutTests/ChangeLog:31: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 28 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3 2013-06-03 15:12:23 PDT
Comment on attachment 203624 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=203624&action=review > Source/WebCore/editing/SpellingCorrectionCommand.cpp:110 > + applyCommandToComposite(ReplaceSelectionCommand::create(document(), fragment, ReplaceSelectionCommand::MatchStyle, EditActionPaste)); should be fragment.release() here
Ryosuke Niwa
Comment 4 2013-06-03 15:45:02 PDT
Note You need to log in before you can comment on or make changes to this bug.