REGRESSION: Undoing autocorrection doesn't prevent a future autocorrection https://bugs.webkit.org/show_bug.cgi?id=117165

Reviewed by Darin Adler.

Source/WebCore:

The bug was caused by SpellingCorrectionCommand returning true in callsAppliedEditingInDoApply, which prevented
the command from being registered to the undo manager. This behavior was introduced in r148306 because TypingCommand
registeres itself to the undo manager in appliedEditing.

Fixed the bug by reverting both r122176 and r148306 and implementing a better fix for the bug 90487.
Instead of using InsertTextCommand, simply don't specify ReplaceSelectionCommand::PreventNesting so that the command
doesn't try to break out of a blockquote.

Also fix a bug in ReplaceSelectionCommand::completeHTMLReplacement uncovered by this change. We were only merging
text nodes at the beginning of the replaced content but not at the end. Call mergeTextNodesAroundPosition for the
second time to fix whitespace at the end of the replaced content.

Test: platform/mac/editing/spelling/autocorrection-respets-undo.html

* editing/CompositeEditCommand.cpp: Explictily check isTypingCommand now that callsAppliedEditingInDoApply has been
removed from SpellingCorrectionCommand and TypingCommand and SpellingCorrectionCommand were only classes that
returned true in callsAppliedEditingInDoApply. See r148306 that introduced this function.
(WebCore::CompositeEditCommand::apply):
* editing/CompositeEditCommand.h: Removed callsAppliedEditingInDoApply.
* editing/ReplaceSelectionCommand.cpp:
(WebCore::ReplaceSelectionCommand::completeHTMLReplacement):
* editing/SpellingCorrectionCommand.cpp: Removed callsAppliedEditingInDoApply, which was the culprit of this bug,
so that CompositeEditCommand::apply correctly registers this command with the undo manager.
(WebCore::SpellingCorrectionCommand::doApply): Use ReplaceSelectionCommand instead of TypingCommand as noted above.
* editing/SpellingCorrectionCommand.h:
* editing/TypingCommand.cpp: Deleted callsAppliedEditingInDoApply.
* editing/TypingCommand.h:

LayoutTests:

Add a regression test and rebaseline other tests as ReplaceSelectionCommand now merges text nodes at
the end of replaced text.

* editing/deleting/merge-paragraph-from-address-expected.txt:
* editing/deleting/merge-paragraph-from-h6-expected.txt:
* editing/deleting/merge-paragraph-from-listing-expected.txt:
* editing/deleting/paste-with-transparent-background-color-expected.txt:
* editing/inserting/insert-3907422-fix-expected.txt:
* editing/pasteboard/copy-image-with-alt-text-expected.txt:
* editing/pasteboard/merge-end-4-expected.txt:
* editing/pasteboard/nested-blocks-with-text-area-expected.txt:
* editing/pasteboard/nested-blocks-with-text-field-expected.txt:
* editing/pasteboard/paste-text-001-expected.txt:
* editing/pasteboard/paste-unrendered-select-expected.txt:
* editing/pasteboard/smart-paste-003-trailing-whitespace-expected.txt:
* platform/mac/editing/deleting/delete-block-merge-contents-001-expected.txt:
* platform/mac/editing/deleting/delete-block-merge-contents-019-expected.txt:
* platform/mac/editing/deleting/delete-block-merge-contents-020-expected.txt:
* platform/mac/editing/pasteboard/4944770-2-expected.txt:
* platform/mac/editing/pasteboard/8145-2-expected.txt:
* platform/mac/editing/pasteboard/paste-line-endings-006-expected.txt:
* platform/mac/editing/pasteboard/paste-text-008-expected.txt:
* platform/mac/editing/pasteboard/paste-text-at-tabspan-003-expected.txt:
* platform/mac/editing/pasteboard/paste-xml-expected.txt:
* platform/mac/editing/spelling/autocorrection-blockquote-crash-expected.txt:
* platform/mac/editing/spelling/autocorrection-blockquote-crash.html: Added more asssertions to ensure that
the autocorrected text is in the blockquote. r122176 modified the test description saying that this test
already checks this condition but it never did so explicitly; it assumed that the autocorrected text was
inside a blockquote as long as it started at a certain offset in the text node.
* platform/mac/editing/spelling/autocorrection-respets-undo-expected.txt: Added.
* platform/mac/editing/spelling/autocorrection-respets-undo.html: Added.
* platform/mac/editing/spelling/autocorrection-with-multi-line-text-expected.txt:


Canonical link: https://commits.webkit.org/135430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151140 268f45cc-cd09-0410-ab3c-d52691b4dbfc