Source/WebCore/editing/CompositeEditCommand.h
@@ -82,7 +82,6 @@ public:
 
     virtual bool isCreateLinkCommand() const;
     virtual bool isTypingCommand() const;
-    virtual bool callsAppliedEditingInDoApply() const;
     virtual bool isDictationCommand() const { return false; }
     virtual bool preservesTypingStyle() const;
     virtual bool shouldRetainAutocorrectionIndicator() const;
