Source/WebCore/editing/TypingCommand.cpp
@@ -645,9 +645,4 @@ bool TypingCommand::isTypingCommand() const
     return true;
 }
 
-bool TypingCommand::callsAppliedEditingInDoApply() const
-{
-    return true;
-}
-
 } // namespace WebCore
